packages/ui/src/components/Box/Box.sass
.#{$cui-conf-globalPrefix}box
	$root: &

	--cui-box-content-padding: calc(var(--cui-padding) / 2)
	--cui-box-content-padding-left: calc(var(--cui-padding) / 2)
	--cui-box-content-padding-right: calc(var(--cui-padding) / 2)
	--cui-box-content-padding-top: calc(var(--cui-padding) / 2)
	--cui-box-content-padding-bottom: calc(var(--cui-padding) / 2)

	--cui-box-content-border: var(--cui-control-border-width) solid var(--cui-color--lower)
	--cui-box-content-background-color: var(--cui-background-color--above)

	--cui-box-background-focused-overlay: linear-gradient(rgba(var(--cui-controls-1000), 0.01), rgba(var(--cui-controls-1000), 0.01))

	background-color: var(--cui-box-content-background-color)
	border: var(--cui-box-content-border)
	border-radius: var(--cui-control-border-radius)

	display: flex
	align-items: stretch
	flex-direction: column

	padding-left: var(--cui-box-content-padding-left)
	padding-right: var(--cui-box-content-padding-right)
	padding-top: var(--cui-box-content-padding-top)
	padding-bottom: var(--cui-box-content-padding-bottom)

	position: relative
	width: 100%

	&.view-seamless
		box-shadow: none
		background: inherit
		border: 0
		padding: 0
		border-radius: unset
	&.view-no-padding
		--cui-box-content-padding: 0
		--cui-box-content-padding-left: 0
		--cui-box-content-padding-right: 0
		--cui-box-content-padding-top: 0
		--cui-box-content-padding-bottom: 0

	&-header,
	&-body
		display: flex
		gap: var(--cui-gap-vertical)

	&-header
		align-items: center
		flex-direction: row
		font-weight: 600
		justify-content: space-between

	&:not(.is-active):not(:focus-within) &-heading
		color: var(--cui-color--high)

	&-actions
		grid-column: 2

	&.is-active,
	&:focus-within
		color: var(--cui-control-color)
		background-image: var(--cui-box-background-focused-overlay)
		transition: box-shadow .15s
		z-index: 2
	&.is-active,
	&:focus-within
		#{$root}-content
			background-image: var(--cui-box-background-focused-overlay)

